--- a/src/OnlineShop/OnlineShop.Server/Web.config
+++ b/src/OnlineShop/OnlineShop.Server/Web.config
@@ -9,13 +9,35 @@
     <httpRuntime targetFramework="4.5.2"/>
   </system.web>
   <system.serviceModel>
+    <services>
+      <service name="OnlineShop.ServiceContracts.OrderContract" behaviorConfiguration="ServiceBehavior">
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:49863/"/>
+          </baseAddresses>
+        </host>
+        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IOrderContract" behaviorConfiguration="webHttpServiceBehavior"/>
+      </service>
+
+      <service name="OnlineShop.ServiceContracts.UserContract" behaviorConfiguration="ServiceBehavior">
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:49863/"/>
+          </baseAddresses>
+        </host>
+        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IUserContract" behaviorConfiguration="webHttpServiceBehavior"/>
+      </service>
+    </services>
     <behaviors>
+      <endpointBehaviors>
+        <behavior name="webHttpServiceBehavior">
+          <webHttp helpEnabled="true" />
+        </behavior>
+      </endpointBehaviors>
       <serviceBehaviors>
-        <behavior>
-          <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
-          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
+        <behavior name="ServiceBehavior">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
