--- a/src/OnlineShop/DAL/DAL.csproj
+++ b/src/OnlineShop/DAL/DAL.csproj
@@ -51,7 +51,7 @@
   <ItemGroup>
     <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserContext.cs" />
+    <Compile Include="AppContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DomainModel\DomainModel.csproj">
