--- a/src/OnlineShop/OnlineShop.Server/Web.config
+++ b/src/OnlineShop/OnlineShop.Server/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
   <appSettings>
@@ -6,26 +6,26 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2"/>
+    <httpRuntime targetFramework="4.5.2" />
   </system.web>
   <system.serviceModel>
     <services>
       <service name="OnlineShop.ServiceContracts.OrderContract" behaviorConfiguration="ServiceBehavior">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:49863/"/>
+            <add baseAddress="http://localhost:49863/" />
           </baseAddresses>
         </host>
-        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IOrderContract" behaviorConfiguration="webHttpServiceBehavior"/>
+        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IOrderContract" behaviorConfiguration="webHttpServiceBehavior" />
       </service>
 
       <service name="OnlineShop.ServiceContracts.UserContract" behaviorConfiguration="ServiceBehavior">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:49863/"/>
+            <add baseAddress="http://localhost:49863/" />
           </baseAddresses>
         </host>
-        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IUserContract" behaviorConfiguration="webHttpServiceBehavior"/>
+        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IUserContract" behaviorConfiguration="webHttpServiceBehavior" />
       </service>
     </services>
     <behaviors>
@@ -47,12 +47,27 @@
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
+    <modules runAllManagedModulesForAllRequests="true" />
     <!--
         To browse web app root directory during debugging, set the value below to true.
         Set to false before deployment to avoid disclosing web app folder information.
       -->
-    <directoryBrowse enabled="true"/>
+    <directoryBrowse enabled="true" />
   </system.webServer>
 
+  <runtime>
+
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+
+      <dependentAssembly>
+
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+
+        <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
+
+      </dependentAssembly>
+
+    </assemblyBinding>
+
+  </runtime>
 </configuration>
