--- a/src/OnlineShop/OnlineShop.Server/Web.config
+++ b/src/OnlineShop/OnlineShop.Server/Web.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
@@ -9,29 +12,41 @@
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
   <system.serviceModel>
+    <extensions>
+      <behaviorExtensions>
+        <add name="newtonsoftJsonBehavior" type="OnlineShop.Server.Formatters.Json.NewtonsoftJsonBehaviorExtension, OnlineShop.Server" />
+      </behaviorExtensions>
+    </extensions>
+
+    <bindings>
+      <webHttpBinding>
+        <binding name="restWebHttpBinding" contentTypeMapper="OnlineShop.Server.Formatters.Json.NewtonsoftJsonContentTypeMapper, OnlineShop.Server"/>
+      </webHttpBinding>
+    </bindings>
+    
     <services>
       <service name="OnlineShop.ServiceContracts.OrderContract" behaviorConfiguration="ServiceBehavior">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:49863/" />
+            <add baseAddress="http://localhost:55447/" />
           </baseAddresses>
         </host>
-        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IOrderContract" behaviorConfiguration="webHttpServiceBehavior" />
+        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IOrderContract" behaviorConfiguration="webHttpServiceBehavior" bindingConfiguration="restWebHttpBinding"/>
       </service>
-
       <service name="OnlineShop.ServiceContracts.UserContract" behaviorConfiguration="ServiceBehavior">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:49863/" />
+            <add baseAddress="http://localhost:55447/" />
           </baseAddresses>
         </host>
-        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IUserContract" behaviorConfiguration="webHttpServiceBehavior" />
+        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IUserContract" behaviorConfiguration="webHttpServiceBehavior" bindingConfiguration="restWebHttpBinding"/>
       </service>
     </services>
     <behaviors>
       <endpointBehaviors>
         <behavior name="webHttpServiceBehavior">
           <webHttp helpEnabled="true" />
+          <newtonsoftJsonBehavior/>
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
@@ -42,8 +57,8 @@
       </serviceBehaviors>
     </behaviors>
     <protocolMapping>
-        <add binding="basicHttpsBinding" scheme="https" />
-    </protocolMapping>    
+      <add binding="basicHttpsBinding" scheme="https" />
+    </protocolMapping>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
   <system.webServer>
@@ -54,20 +69,21 @@
       -->
     <directoryBrowse enabled="true" />
   </system.webServer>
-
   <runtime>
-
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-
       <dependentAssembly>
-
         <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
-
         <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
-
       </dependentAssembly>
-
     </assemblyBinding>
-
   </runtime>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Database.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
