--- a/src/OnlineShop/OnlineShop.DAL.EntityFramework/OnlineShop.DAL.EntityFramework.csproj
+++ b/src/OnlineShop/OnlineShop.DAL.EntityFramework/OnlineShop.DAL.EntityFramework.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,6 +53,7 @@
     <Compile Include="AppContext.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="OrderRepository.cs" />
+    <Compile Include="ProductRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitOfWork.cs" />
     <Compile Include="UserRepository.cs" />
