Task 68 is done

--- a/src/OnlineShop/OnlineShop.Server/Web.config
+++ b/src/OnlineShop/OnlineShop.Server/Web.config
@@ -41,6 +41,14 @@
         </host>
         <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IUserContract" behaviorConfiguration="webHttpServiceBehavior" bindingConfiguration="restWebHttpBinding" />
       </service>
+       <service name="OnlineShop.ServiceContracts.ProductContract" behaviorConfiguration="ServiceBehavior">
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:55447/" />
+          </baseAddresses>
+        </host>
+        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IProductContract" behaviorConfiguration="webHttpServiceBehavior" bindingConfiguration="restWebHttpBinding" />
+      </service>
     </services>
     <behaviors>
       <endpointBehaviors>
