--- a/src/OnlineShop/OnlineShop.Client/OnlineShop.Client.csproj
+++ b/src/OnlineShop/OnlineShop.Client/OnlineShop.Client.csproj
@@ -70,6 +70,7 @@
     </Compile>
     <Compile Include="Common\IMessageService.cs" />
     <Compile Include="Common\MessageService.cs" />
+    <Compile Include="Common\Messenger.cs" />
     <Compile Include="Design\DesignOrderService.cs" />
     <Compile Include="Design\DesignUserService.cs" />
     <Compile Include="Services\IOrderService.cs" />
