--- a/src/OnlineShop/OnlineShop.Client/OnlineShop.Client.csproj
+++ b/src/OnlineShop/OnlineShop.Client/OnlineShop.Client.csproj
@@ -68,8 +68,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Common\IMessageService.cs" />
-    <Compile Include="Common\MessageService.cs" />
+    <Compile Include="Common\IMessegeManager.cs" />
+    <Compile Include="Common\MessegeManager.cs" />
     <Compile Include="Common\Messenger.cs" />
     <Compile Include="Design\DesignOrderService.cs" />
     <Compile Include="Design\DesignUserService.cs" />
