--- a/src/OnlineShop/OnlineShop.Server/Web.config
+++ b/src/OnlineShop/OnlineShop.Server/Web.config
@@ -33,6 +33,14 @@
         </host>
         <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IOrderContract" behaviorConfiguration="webHttpServiceBehavior" bindingConfiguration="restWebHttpBinding" />
       </service>
+      <service name="OnlineShop.ServiceContracts.OrderItemContract" behaviorConfiguration="ServiceBehavior">
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:55447/" />
+          </baseAddresses>
+        </host>
+        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IOrderItemContract" behaviorConfiguration="webHttpServiceBehavior" bindingConfiguration="restWebHttpBinding" />
+      </service>
       <service name="OnlineShop.ServiceContracts.UserContract" behaviorConfiguration="ServiceBehavior">
         <host>
           <baseAddresses>
