--- a/src/OnlineShop/OnlineShop.Client/OnlineShop.Client.csproj
+++ b/src/OnlineShop/OnlineShop.Client/OnlineShop.Client.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Common\IMessegeManager.cs" />
     <Compile Include="Common\MessegeManager.cs" />
     <Compile Include="Common\Messenger.cs" />
+    <Compile Include="Common\ObjectCopier.cs" />
     <Compile Include="Common\WindowMessege.cs" />
     <Compile Include="Design\DesignOrderService.cs" />
     <Compile Include="Design\DesignUserService.cs" />
