--- a/src/OnlineShop/OnlineShop.Server/Web.config
+++ b/src/OnlineShop/OnlineShop.Server/Web.config
@@ -12,18 +12,6 @@
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
   <system.serviceModel>
-    <extensions>
-      <behaviorExtensions>
-        <add name="newtonsoftJsonBehavior" type="OnlineShop.Server.Formatters.Json.NewtonsoftJsonBehaviorExtension, OnlineShop.Server" />
-      </behaviorExtensions>
-    </extensions>
-
-    <bindings>
-      <webHttpBinding>
-        <binding name="restWebHttpBinding" contentTypeMapper="OnlineShop.Server.Formatters.Json.NewtonsoftJsonContentTypeMapper, OnlineShop.Server" />
-      </webHttpBinding>
-    </bindings>
-    
     <services>
       <service name="OnlineShop.ServiceContracts.OrderContract" behaviorConfiguration="ServiceBehavior">
         <host>
@@ -31,7 +19,7 @@
             <add baseAddress="http://localhost:55447/" />
           </baseAddresses>
         </host>
-        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IOrderContract" behaviorConfiguration="webHttpServiceBehavior" bindingConfiguration="restWebHttpBinding" />
+        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IOrderContract" behaviorConfiguration="webHttpServiceBehavior"/>
       </service>
       <service name="OnlineShop.ServiceContracts.OrderItemContract" behaviorConfiguration="ServiceBehavior">
         <host>
@@ -39,7 +27,7 @@
             <add baseAddress="http://localhost:55447/" />
           </baseAddresses>
         </host>
-        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IOrderItemContract" behaviorConfiguration="webHttpServiceBehavior" bindingConfiguration="restWebHttpBinding" />
+        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IOrderItemContract" behaviorConfiguration="webHttpServiceBehavior"/>
       </service>
       <service name="OnlineShop.ServiceContracts.UserContract" behaviorConfiguration="ServiceBehavior">
         <host>
@@ -47,7 +35,7 @@
             <add baseAddress="http://localhost:55447/" />
           </baseAddresses>
         </host>
-        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IUserContract" behaviorConfiguration="webHttpServiceBehavior" bindingConfiguration="restWebHttpBinding" />
+        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IUserContract" behaviorConfiguration="webHttpServiceBehavior" />
       </service>
        <service name="OnlineShop.ServiceContracts.ProductContract" behaviorConfiguration="ServiceBehavior">
         <host>
@@ -55,14 +43,13 @@
             <add baseAddress="http://localhost:55447/" />
           </baseAddresses>
         </host>
-        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IProductContract" behaviorConfiguration="webHttpServiceBehavior" bindingConfiguration="restWebHttpBinding" />
+        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IProductContract" behaviorConfiguration="webHttpServiceBehavior"/>
       </service>
     </services>
     <behaviors>
       <endpointBehaviors>
         <behavior name="webHttpServiceBehavior">
           <webHttp helpEnabled="true" />
-          <newtonsoftJsonBehavior />
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
