--- a/src/OnlineShop/OnlineShop.Server/Web.config
+++ b/src/OnlineShop/OnlineShop.Server/Web.config
@@ -13,6 +13,14 @@
   </system.web>
   <system.serviceModel>
     <services>
+      <service name="OnlineShop.ServiceContracts.AccountContract" behaviorConfiguration="ServiceBehavior">
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:55447/" />
+          </baseAddresses>
+        </host>
+        <endpoint address="" binding="webHttpBinding" contract="OnlineShop.ServiceContracts.IAccountContract" behaviorConfiguration="webHttpServiceBehavior" />
+      </service>
       <service name="OnlineShop.ServiceContracts.OrderContract" behaviorConfiguration="ServiceBehavior">
         <host>
           <baseAddresses>
