--- a/src/OnlineShop/OnlineShop.ServiceContracts/OnlineShop.ServiceContracts.csproj
+++ b/src/OnlineShop/OnlineShop.ServiceContracts/OnlineShop.ServiceContracts.csproj
@@ -46,7 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountContract.cs" />
     <Compile Include="AutoMapperConfigurator.cs" />
+    <Compile Include="IAccountContract.cs" />
     <Compile Include="IOrderItemContract.cs" />
     <Compile Include="IProductContract.cs" />
     <Compile Include="IUserContract.cs" />
@@ -55,6 +57,7 @@
     <Compile Include="OrderItemContract.cs" />
     <Compile Include="ProductContract.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\Encryptor.cs" />
     <Compile Include="UserContract.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -74,6 +77,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
