--- a/src/OnlineShop/OnlineShop.ServiceContracts/OnlineShop.ServiceContracts.csproj
+++ b/src/OnlineShop/OnlineShop.ServiceContracts/OnlineShop.ServiceContracts.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Web" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountContract.cs" />
+    <Compile Include="AuthorizeAttribute.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="IAccountContract.cs" />
     <Compile Include="IOrderItemContract.cs" />
     <Compile Include="IProductContract.cs" />
@@ -66,6 +69,10 @@
     <ProjectReference Include="..\OnlineShop.BL\OnlineShop.BL.csproj">
       <Project>{331fa8b6-1d87-46ef-88e0-fb57b58408ee}</Project>
       <Name>OnlineShop.BL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\OnlineShop.DAL.EntityFramework\OnlineShop.DAL.EntityFramework.csproj">
+      <Project>{D9ABDF6F-C378-4BA4-999D-10237F841862}</Project>
+      <Name>OnlineShop.DAL.EntityFramework</Name>
     </ProjectReference>
     <ProjectReference Include="..\OnlineShop.DTO\OnlineShop.DTO.csproj">
       <Project>{79CB1BDA-2A96-4AF5-A5DA-8A111BDDAD94}</Project>
