--- a/src/OnlineShop/OnlineShop.Client/OnlineShop.Client.csproj
+++ b/src/OnlineShop/OnlineShop.Client/OnlineShop.Client.csproj
@@ -42,6 +42,10 @@
       <HintPath>..\packages\Autofac.4.2.1\lib\net45\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="log4net, Version=2.0.7.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.7\lib\net45-full\log4net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Web.Extensions" />
@@ -69,6 +73,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Common\IMessegeManager.cs" />
+    <Compile Include="Common\Logger.cs" />
     <Compile Include="Common\MessegeManager.cs" />
     <Compile Include="Common\Messenger.cs" />
     <Compile Include="Common\ObjectCopier.cs" />
