--- a/src/OnlineShop/OnlineShop.Client/App.config
+++ b/src/OnlineShop/OnlineShop.Client/App.config
@@ -10,7 +10,7 @@
 
   <log4net>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="AllLog.log"/>
+      <param name="File" value="Log.txt"/>
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
       <appendToFile value="true" />
       <rollingStyle value="Size" />
