--- a/src/OnlineShop/OnlineShop.Server/Web.config
+++ b/src/OnlineShop/OnlineShop.Server/Web.config
@@ -57,7 +57,7 @@
     <behaviors>
       <endpointBehaviors>
         <behavior name="webHttpServiceBehavior">
-          <webHttp helpEnabled="true" />
+          <webHttp helpEnabled="true" faultExceptionEnabled="true"/>
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
